# wham

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  ENGINEERING.md  README.md  critique.md  spec.md
.github/workflows/: bench.yml  browser-tests.yml  check-clippy.yml  check-wasm-size.yml  check-wasm.yml  ci.yml  test-cdp-runner.yml  test-ui-core.yml  test-wham-test.yml
crates/cdp-runner/: Cargo.toml
crates/cdp-runner/src/: lib.rs  main.rs
crates/cdp-runner/tests/: cdp.rs
crates/ui-core/: Cargo.toml
crates/ui-core/benches/: batch_bench.rs  text_bench.rs  ui_bench.rs
crates/ui-core/src/: accessibility.rs  app.rs  batch.rs  form.rs  hit_test.rs  icon.rs  input.rs  lib.rs  rest.rs  state.rs  text.rs  theme.rs  types.rs  ui.rs  validation.rs
crates/ui-core/tests/: accessibility.rs  optimistic.rs  text_edit.rs  validation.rs
crates/ui-wasm/: Cargo.toml
crates/ui-wasm/src/: atlas.rs  demo.rs  lib.rs  renderer.rs  runtime.rs
crates/wham-core/: Cargo.toml
crates/wham-core/src/: accessibility.rs  batch.rs  input.rs  lib.rs  state.rs  types.rs
crates/wham-elements/: Cargo.toml
crates/wham-elements/src/: accessibility.rs  button.rs  form.rs  lib.rs  link.rs  text.rs  validation.rs
crates/wham-test/: Cargo.toml
crates/wham-test/src/: lib.rs
crates/wham-test/tests/: checkout.rs  notification_settings.rs  sign_in.rs
crates/wham-ui/: Cargo.toml
crates/wham-ui/src/: lib.rs
crates/wham-ui/src/nav/: breadcrumb.rs  mod.rs  navbar.rs  pagination.rs  sidebar.rs  tabs.rs
docs/: accessibility.md  api-reference.md  api.md  getting-started.md  migration-guide.md  performance.md  testing.md  theming.md
docs/examples/: README.md  data-entry-table.js  login-form.js  multi-step-checkout.js  registration-form.js
docs/techincal/: rust-wasm-memory-constraints-review.md  rust-wasm-memory-constraints.md
examples/web/: app.js  index.html  style.css
