[package]
name = "ui-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
unicode-segmentation = "1.11"

[dev-dependencies]
once_cell = "1.19"
criterion = "0.5"

[[bench]]
name = "ui_bench"
harness = false
