[package]
name = "ui-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wham-core = { path = "../wham-core" }
ui-core = { path = "../ui-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "console",
] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
fontdue = "0.8"
thiserror = "1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
