[package]
name = "wham-elements"
version = "0.1.0"
edition = "2021"
description = "HTML spec element layer for the wham GPU-rendered forms library — form model, text editing, validation, and accessibility"

[lib]
path = "src/lib.rs"

[dependencies]
wham-core = { path = "../wham-core" }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.11"

[dev-dependencies]
once_cell = "1.19"
proptest = "1.4"
